5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1846_2603.log
== SUBMITION (2019-06-26 14:48:51) 
-- CODE:
from numpy import*

v ´= array(eval(input("Digite a matriz: ")))

linhas = shape(v)[0]
colunas = shape(v)[1]
matriz = zeros(linhas, colunas, dtype= int)
vetor = zeros(colunas, dtype=int)

for i in range(colunas):
	for j in range(linhas):
		vetor[j] = v[j,i]
		
	vetor = sorted(vetor,reverse=true)
	matriz[:,i] = vetor
	
print(matriz)
-- EXECUTION TIME:
0.605099
-- ERROR:
  File "/home/codebench/codes/1846/2603/main.py", line 3
    v \xb4= array(eval(input()))
      ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:49:16) 
-- CODE:
from numpy import*

v ´= array(eval(input("Digite a matriz: ")))

linhas = shape(v)[0]
colunas = shape(v)[1]
matriz = zeros(linhas, colunas, dtype= int)
vetor = zeros(colunas, dtype=int)

for i in range(colunas):
	for j in range(linhas):
		vetor[j] = v[j,i]
		
	vetor = sorted(vetor,reverse=True)
	matriz[:,i] = vetor
	
print(matriz)
-- EXECUTION TIME:
0.896265
-- ERROR:
  File "/home/codebench/codes/1846/2603/main.py", line 3
    v \xb4= array(eval(input()))
      ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:49:43) 
-- CODE:
from numpy import*

v ´= array(eval(input("Digite a matriz: ")))

linhas = shape(v)[0]
colunas = shape(v)[1]
matriz = zeros(linhas, colunas, dtype= int)
vetor = zeros(colunas, dtype=int)

for i in range(colunas):
	for j in range(linhas):
		vetor[j] = matriz[j,i]
		
	vetor = sorted(vetor,reverse=True)
	matriz[:,i] = vetor
	
print(matriz)
-- ERROR:
File "XXXX", line 3
    v ´= array(eval(input()))
      ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:50:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

v ´= array(eval(input("Digite a matriz: ")))

linhas = shape(v)[0]
colunas = shape(v)[1]
matriz = zeros(linhas, colunas, dtype= int)
vetor = zeros(colunas, dtype=int)

for i in range(colunas):
	for j in range(linhas):
		vetor[j] = matriz[j,i]
		
	vetor = sorted(vetor,reverse=True)
	matriz[:,i] = vetor
	
print(matriz)
-- ERROR:
File "XXXX", line 4
    v ´= array(eval(input()))
      ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:50:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

linhas = shape(v)[0]
colunas = shape(v)[1]
matriz = zeros(linhas, colunas, dtype= int)
vetor = zeros(colunas, dtype=int)

for i in range(colunas):
	for j in range(linhas):
		vetor[j] = matriz[j,i]
		
	vetor = sorted(vetor,reverse=True)
	matriz[:,i] = vetor
	
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:50:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

linhas = shape(v)[0]
colunas = shape(v)[1]
matriz = zeros(linhas, colunas, dtype= int)
vetor = zeros(colunas, dtype=int)

for i in range(colunas):
	for j in range(linhas):
		vetor[j] = matriz[j,i]
		
	vetor = sorted(vetor,reverse=True)
	matriz[:,i] = vetor
	
print(matriz)
-- EXECUTION TIME:
1.1758
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2603/main.py", line 8, in <module>
    matriz = zeros(linhas, colunas, dtype= int)
TypeError: Argument given by name ('dtype') and position (2)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:50:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

linhas = shape(v)[0]
colunas = shape(v)[1]
matriz = zeros(linhas, colunas, dtype= int)
vetor = zeros(colunas, dtype=int)

for i in range(colunas):
	for j in range(linhas):
		vetor[j] = v[j,i]
		
	vetor = sorted(vetor,reverse=True)
	matriz[:,i] = vetor
	
print(matriz)
-- EXECUTION TIME:
1.11349
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2603/main.py", line 8, in <module>
    matriz = zeros(linhas, colunas, dtype= int)
TypeError: Argument given by name ('dtype') and position (2)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:50:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

linhas = shape(v)[0]
colunas = shape(v)[1]
matriz = zeros(linhas, colunas, dtype= int)
vetor = zeros(colunas, dtype=int)

for i in range(colunas):
	for j in range(linhas):
		vetor[j] = v[j,i]
		
	vetor = sorted(vetor,reverse=True)
	matriz[:,i] = vetor
	
print(matriz)
-- EXECUTION TIME:
0.861594
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2603/main.py", line 8, in <module>
    matriz = zeros(linhas, colunas, dtype= int)
TypeError: Argument given by name ('dtype') and position (2)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:51:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

linhas = shape(v)[0]
colunas = shape(v)[1]
matriz = zeros(linhas, colunas, dtype= int)
vetor = zeros(colunas, dtype=int)

for i in range(colunas):
	for j in range(linhas):
		vetor[j] = v[j,i]
		
	vetor = sorted(vetor,reverse=True)
	matriz[:,i] = vetor
	
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:51:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

linhas = shape(v)[0]
colunas = shape(v)[1]
matriz = zeros(linhas, colunas, dtype= int)
vetor = zeros(colunas, dtype=int)

for i in range(colunas):
	for j in range(linhas):
		vetor[j] = v[j,i]
		
	vetor = sorted(vetor,reverse=True)
	matriz[:,i] = vetor
	
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:53:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite a matriz: ")))

linhas = shape(v)[0]
colunas = shape(v)[1]
matriz = zeros((linhas, colunas), dtype= int)
vetor = zeros(colunas, dtype=int)

for i in range(colunas):
	for j in range(linhas):
		vetor[j] = v[j,i]
		
	vetor = sorted(vetor,reverse=True)
	matriz[:,i] = vetor
	
print(matriz)
-- EXECUTION TIME:
1.18554
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
